# kkn-automation-standalone

./: .env.example  .gitignore  README.md  locations.example.yaml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: daily-attendance.yml
docs/launchd/: kkn-attendance.plist
src/: actions.py  datatypes.py  main.py
src/ui/: prompt.py  tables.py  tui.py
src/utils/: attendance.py  common.py  drive.py  generative.py  group_report.py  kkn.py  locations.py  logger.py  oauth.py  proker_presensi.py  report.py  simaster.py
