[project]
name = "vnext-checkpoint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "cachelib>=0.13.0",
    "dotenv>=0.9.9",
    "google-genai>=1.56.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pyjwt>=2.10.1",
    "rich>=14.2.0",
]
