[project]
name = "vnext-checkpoint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachelib>=0.13.0",
    "dotenv>=0.9.9",
    "google-genai>=1.56.0",
    "httpx>=0.28.1",
    "ics>=0.7.2",
    "lxml>=6.0.2",
    "prompt-toolkit>=3.0.52",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "selectolax>=0.4.6",
    "typed-argument-parser>=1.11.0",
    "weasyprint>=68.0",
]
