[project]
  name            = "vnext-checkpoint"
  version         = "0.1.0"
  description     = "Add your description here"
  readme          = "README.md"
  requires-python = ">=3.12"
  dependencies    = [
    "cachelib>=0.13.0",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.150.0",
    "google-auth>=2.37.0",
    "google-genai>=1.56.0",
    "httpx>=0.28.1",
    "ics>=0.7.2",
    "lxml>=6.0.2",
    "prompt-toolkit>=3.0.52",
    "pyjwt>=2.10.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "selectolax>=0.4.6",
    "typed-argument-parser>=1.11.0",
    "weasyprint>=68.0",
  ]

[tool.ruff]
  exclude        = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
  ]
  line-length    = 120
  indent-width   = 2
  target-version = "py312"

  [tool.ruff.lint]
    select  = ["I", "F"]
    ignore  = ["F405", "F403", "E741"]
    fixable = ["ALL"]

  [tool.ruff.format]
    quote-style               = "double"
    indent-style              = "space"
    skip-magic-trailing-comma = false
    docstring-code-format     = true
